# grpc-over-ayame

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cmake.sh  install_deps.sh
cmake/: FindGgrpc.cmake  FindSpdlog.cmake  FindWebRTC.cmake
proto/: goa.proto
src/: ayame_signaling.cpp  ayame_signaling.h  ayame_transport.h  goa_client.cpp  goa_server.cpp
